Fix autocomplete dropdown jumping on mobile scroll

--- a/autocomplete.scss
+++ b/autocomplete.scss
@@ -11,6 +11,7 @@
 		margin-top: -1px;
 		padding: 0;
 		position: absolute;
+		top: 100%;
 		z-index: 1;
 
 		&:empty {
